--- a/docs/1.0/glossary/index.textile
+++ b/docs/1.0/glossary/index.textile
@@ -16,5 +16,9 @@ p(caption). Data type that can be send within JSON files.
 (#text).| *Text* | Any chain of characters, including carriage returns, with no size limit. |
 (#integer).| *Integer* | Any positive integer. |
 (#long).| *Long* | Any integer, positive or negative. |
-(#boolean).| *Boolean* | _false_ or _true_ / _0_ or _1_. |
-(#address).| *Address* | In the API, Addresses got their own JSON format. Cick "here":/docs/1.0/api/address/#format for further details.  |
+(#boolean).| *Boolean* | _false_ or _true_. Not case sensitive. |
+(#date).| *Date* | Date format that should match dd-MM-yyyy. e.g. 26-06-2013. |
+(#address).| *Address* | In the API, Addresses got their own JSON format.
+Cick "here":/docs/1.0/api/address/#format for further details.  |
+(#order_line).| *Order Line* | In the API, Order Lines got their own JSON format, and stay the same either for Estimate, Orders, Invoices, etc...
+Cick "here":/docs/1.0/api/order_line/#format for further details.  |
