--- a/docs/1.0/api/index.textile
+++ b/docs/1.0/api/index.textile
@@ -11,12 +11,12 @@ There's two kind of resources in myERP. Actual Datas from your domain, and those
 
 h3. Actual Data
 
-They end with the *id* of the actual data they refer to.
+They end with the *id* of the actual data they refer to. They describe a single data.
 
 p. Sample
 
 {% highlight bash %}
-curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.account.url}}55002 {{site.api.auth_pattern}}
+curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url}}/55002 {{site.api.auth_pattern}}
 {% endhighlight %}
 *55002* is the *id* of the account you are trying to get. Within myERP, you can find this id at the end of this account URI edition mode:
 {% highlight bash %}
@@ -27,7 +27,7 @@ Those are often used for GET (to retrieve a data), PUT (to edit a data) or DELET
 
 h3. Data type
 
-There's no id into them, and they got a *s* at the end.
+There's no id into them. They describe a type of data as a whole.
 
 p. Sample
 
@@ -38,6 +38,19 @@ This will retrieve the whole list of your accounts.
 
 Those are used to create new data of this kind, using POST request.
 They are also usefull when you want to create or delete several datas of a specific kind in a row.
+
+h3. Inner data
+
+Some data are what we call _inner data_. Those are datas that are embeded into another one. Like contacts into customer. For those datas, URI are longer since they start with the container.
+
+p. Sample
+
+{% highlight bash %}
+curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url}}/:account_id/{{ site.resource.account_contacts_.url}} {{site.api.auth_pattern}}
+{% endhighlight %}
+This will retrieve all the contacts of the account _account_id_.
+
+There's not that much of this kind, mostly contacts and purchase or sales documents order lines.
 
 
 h2. JSON Fields
@@ -53,13 +66,13 @@ If your JSON contains any fields that are not managed by the resource, those fie
 
 h3. Duplicates fields
 
-If a field is duplicate within the JSON or a resource, the value of last one will prevail.
+If a field is duplicate within the JSON or a resource, the value of the last one will prevail.
 
 h3. Wrong values
 
 * Bad type: If any value of a wrong type stands into your JSON, the parsing of the JSON will turn wrong and an error message will be returned.
-* Wrong value: Some fields only accept certain values. If the value of such a field is wrong in your JSON, an error message will be returned.
-* Non editable: While editing a resource, if any field that is not editable stands within your JSON, and tries to perform an actual modification, an error message will be returned.
+* Wrong value: Some fields only accept certain values. If the value of such a field is wrong in your JSON, an error message will be returned about this field.
+* Non editable: While editing a resource, if any field that is not editable stands within your JSON, and tries to perform an actual modification, an error message will be returned about this field.
 
 
 h1(#resources). REST API v1.0 Resources
@@ -69,9 +82,9 @@ p(title). "Accounts":account/#format
 p(caption). Accounts are collections of accounts (leads and customers).
 
 |_(thead). Type |_(thead). Description |
-|"GET account/:id":account/#account_get|Returns all the information about the account|
-|"PUT account/:id":account/#account_put|Update a single account|
-|"DELETE account/:id":account/#account_delete|Deletes a single account|
+|"GET accounts/:id":account/#account_get|Returns all the information about the account|
+|"PUT accounts/:id":account/#account_put|Update a single account|
+|"DELETE accounts/:id":account/#account_delete|Deletes a single account|
 |"GET accounts":account/#accounts_get|Returns the list of all your accounts|
 |"POST accounts":account/#accounts_post|Create a single account|
 |"PUT accounts":account/#accounts_put|Create and Update several accounts in a row|
@@ -79,25 +92,25 @@ p(caption). Accounts are collections of accounts (leads and customers).
 
 p(title). "Account Contacts":account_contact/#format
 
-p(caption). Account contacts are collections of account contacts.
+p(caption). Account contacts belongs to a particular account. The _account_id_ in the URI defines which account.
 
 |_(thead). Type |_(thead). Description |
-|"GET account_contact/:id":account_contact/#account_contact_get|Returns all the information about the account contact|
-|"PUT account_contact/:id":account_contact/#account_contact_put|Update a single account contact|
-|"DELETE account_contact/:id":account_contact/#account_contact_delete|Deletes a single account contact|
-|"GET account_contacts":account_contact/#account_contacts_get|Returns the list of all your account contacts|
-|"POST account_contacts":account_contact/#account_contacts_post|Create a single account contact|
-|"PUT account_contacts":account_contact/#account_contacts_put|Create and update several account contacts in a row|
-|"DELETE account_contacts":account_contact/#account_contacts_delete|Delete several account contacts in a row|
+|"GET accounts/:account_id/contacts/:id":account_contact/#account_contact_get|Returns all the information about the contact|
+|"PUT accounts/:account_id/contacts/:id":account_contact/#account_contact_put|Update a single contact|
+|"DELETE accounts/:account_id/contacts/:id":account_contact/#account_contact_delete|Deletes a single contact|
+|"GET accounts/:account_id/contacts":account_contact/#account_contacts_get|Returns the list of all contacts who belongs to the _account_id_ account|
+|"POST accounts/:account_id/contacts":account_contact/#account_contacts_post|Create a single contact on the _account_id_ account|
+|"PUT accounts/:account_id/contacts":account_contact/#account_contacts_put|Create and update several contacts in a row|
+|"DELETE accounts/:account_id/contacts":account_contact/#account_contacts_delete|Delete several contacts in a row|
 
 p(title). "Projects":project/#format
 
 p(caption). Projects are an easy way to organize your tasks and documents towards a common objective.
 
 |_(thead). Type |_(thead). Description |
-|"GET project/:id":project/#project_get|Returns all the information about the project|
-|"PUT project/:id":project/#project_put|Update a single project|
-|"DELETE project/:id":project/#project_delete|Deletes a single project|
+|"GET projects/:id":project/#project_get|Returns all the information about the project|
+|"PUT projects/:id":project/#project_put|Update a single project|
+|"DELETE projects/:id":project/#project_delete|Deletes a single project|
 |"GET projects":project/#projects_get|Returns the list of all your projects|
 |"POST projects":project/#projects_post|Create a single project|
 |"PUT projects":project/#projects_put|Create and update several projects in a row|
@@ -108,5 +121,10 @@ p(title). "Sales Order":sales_order/#format
 p(caption). The way to register and track orders from your customers.
 
 |_(thead). Type |_(thead). Description |
-|"GET sales_order/:id":sales_order/#sales_order_get|Returns all the information about the sales order|
-|"DELETE sales_order/:id":sales_order/#sales_order_delete|Deletes a single sales order|
+|"GET sales_orders/:id":sales_order/#sales_order_get|Returns all the information about the sales order, including its order lines|
+|"PUT sales_orders/:id":sales_order/#sales_order_put|Update a single sales order. Use /order_lines/:id to edit order lines|
+|"DELETE sales_orders/:id":sales_order/#sales_order_delete|Deletes a single sales order and all its order lines|
+|"GET sales_orders":sales_order/#sales_orders_get|Returns the list of all your sales orders|
+|"POST sales_orders":sales_order/#sales_orders_post|Create a single sales order and its order lines|
+|"PUT sales_orders":sales_order/#sales_orders_put|Create and Update several sales orders in a row|
+|"DELETE sales_orders":sales_order/#sales_orders_delete|Delete several sales orders and their order lines in a row|
