--- a/docs/1.0/api/index.textile
+++ b/docs/1.0/api/index.textile
@@ -23,7 +23,7 @@ curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url
 https://app.myerp.com/index.jsp?locale=en_US#account/55002/edit
 {% endhighlight %}
 
-Those are often used for GET (to retrieve a data), PUT (to edit a data) or DELETE (to delete a data) request.
+Those are mostly used for GET (to retrieve a data), PUT (to edit a data) or DELETE (to delete a data) request.
 
 h3. Data type
 
@@ -34,23 +34,24 @@ p. Sample
 {% highlight bash %}
 curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url}} {{site.api.auth_pattern}}
 {% endhighlight %}
-This will retrieve the whole list of your accounts.
+This will retrieve the list of all your accounts.
 
 Those are used to create new data of this kind, using POST request.
 They are also usefull when you want to create or delete several datas of a specific kind in a row.
 
-h3. Inner data
 
-Some data are what we call _inner data_. Those are datas that are embeded into another one. Like contacts into customer. For those datas, URI are longer since they start with the container.
+h2. Inner data
+
+Some data are what we call _inner data_. Those are datas that are embeded into another one. Like contacts into customer. For those datas, URI are longer since they start by their container.
 
 p. Sample
 
 {% highlight bash %}
-curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url}}/:account_id/{{ site.resource.account_contacts_.url}} {{site.api.auth_pattern}}
+curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url}}/55002/{{ site.resource.account_contacts_.url}} {{site.api.auth_pattern}}
 {% endhighlight %}
-This will retrieve all the contacts of the account _account_id_.
+This will retrieve all the contacts of the account *55002*.
 
-There's not that much of this kind, mostly contacts and purchase or sales documents order lines.
+There's not that much of this kind, mostly contacts (on accounts and vendors) and order lines (on either purchases or sales documents).
 
 
 h2. JSON Fields
@@ -58,11 +59,11 @@ h2. JSON Fields
 h3. Missing fields
 
 * Creation: if the missing field is mandatory, an error message will be returned. Otherwise, the default value will be applied.
-* Edition: the missing field is ignored, and no changes will be performed on it.
+* Edition: the missing field is ignored, and no changes will be performed on it. If you want to edit a single field, just send this single one.
 
 h3. Non existant fields
 
-If your JSON contains any fields that are not managed by the resource, those fields will be ignored.
+If your JSON contains any fields that are not managed by the resource, those fields will be ignored. So, beware of any typo.
 
 h3. Duplicates fields
 
@@ -71,8 +72,8 @@ If a field is duplicate within the JSON or a resource, the value of the last one
 h3. Wrong values
 
 * Bad type: If any value of a wrong type stands into your JSON, the parsing of the JSON will turn wrong and an error message will be returned.
-* Wrong value: Some fields only accept certain values. If the value of such a field is wrong in your JSON, an error message will be returned about this field.
-* Non editable: While editing a resource, if any field that is not editable stands within your JSON, and tries to perform an actual modification, an error message will be returned about this field.
+* Wrong value: Some fields only accept certain values. If the value of such a field is wrong in your JSON, an error message will be returned.
+* Non editable: While editing a resource, if any field that is not editable stands within your JSON, and tries to perform an actual modification, an error message will be returned.
 
 
 h1(#resources). REST API v1.0 Resources
@@ -82,26 +83,26 @@ p(title). "Accounts":account/#format
 p(caption). Accounts are collections of accounts (leads and customers).
 
 |_(thead). Type |_(thead). Description |
-|"GET accounts/:id":account/#account_get|Returns all the information about the account|
-|"PUT accounts/:id":account/#account_put|Update a single account|
-|"DELETE accounts/:id":account/#account_delete|Deletes a single account|
-|"GET accounts":account/#accounts_get|Returns the list of all your accounts|
-|"POST accounts":account/#accounts_post|Create a single account|
-|"PUT accounts":account/#accounts_put|Create and Update several accounts in a row|
-|"DELETE accounts":account/#accounts_delete|Delete several accounts in a row|
+|"GET accounts/:id":account/#account_get|Returns all the information about the account.|
+|"PUT accounts/:id":account/#account_put|Update a single account.|
+|"DELETE accounts/:id":account/#account_delete|Deletes a single account. Also delete all of his contacts.|
+|"GET accounts":account/#accounts_get|Returns the list of all your accounts.|
+|"POST accounts":account/#accounts_post|Create a single account.|
+|"PUT accounts":account/#accounts_put|Create and Update several accounts in a row.|
+|"DELETE accounts":account/#accounts_delete|Delete several accounts in a row.|
 
 p(title). "Account Contacts":account_contact/#format
 
 p(caption). Account contacts belongs to a particular account. The _account_id_ in the URI defines which account.
 
 |_(thead). Type |_(thead). Description |
-|"GET accounts/:account_id/contacts/:id":account_contact/#account_contact_get|Returns all the information about the contact|
-|"PUT accounts/:account_id/contacts/:id":account_contact/#account_contact_put|Update a single contact|
-|"DELETE accounts/:account_id/contacts/:id":account_contact/#account_contact_delete|Deletes a single contact|
-|"GET accounts/:account_id/contacts":account_contact/#account_contacts_get|Returns the list of all contacts who belongs to the _account_id_ account|
-|"POST accounts/:account_id/contacts":account_contact/#account_contacts_post|Create a single contact on the _account_id_ account|
-|"PUT accounts/:account_id/contacts":account_contact/#account_contacts_put|Create and update several contacts in a row|
-|"DELETE accounts/:account_id/contacts":account_contact/#account_contacts_delete|Delete several contacts in a row|
+|"GET accounts/:account_id/contacts/:id":account_contact/#account_contact_get|Returns all the information about the account contact. This contact should belongs to the account _account_id_.|
+|"PUT accounts/:account_id/contacts/:id":account_contact/#account_contact_put|Update a single account contact. This contact should belongs to the account _account_id_.|
+|"DELETE accounts/:account_id/contacts/:id":account_contact/#account_contact_delete|Deletes a single account contact. This contact should belongs to the account _account_id_.|
+|"GET accounts/:account_id/contacts":account_contact/#account_contacts_get|Returns all the contacts that belongs to the account _account_id_.|
+|"POST accounts/:account_id/contacts":account_contact/#account_contacts_post|Create a single account contact. This contact will belongs to the account _account_id_.|
+|"PUT accounts/:account_id/contacts":account_contact/#account_contacts_put|Create and Update several account contacts in a row. All should or will belongs to the account _account_id_.|
+|"DELETE accounts/:account_id/contacts":account_contact/#account_contacts_delete|Delete several account contacts in a row. Those contacts should belongs to the account _account_id_.|
 
 p(title). "Projects":project/#format
 
@@ -121,10 +122,10 @@ p(title). "Sales Order":sales_order/#format
 p(caption). The way to register and track orders from your customers.
 
 |_(thead). Type |_(thead). Description |
-|"GET sales_orders/:id":sales_order/#sales_order_get|Returns all the information about the sales order, including its order lines|
-|"PUT sales_orders/:id":sales_order/#sales_order_put|Update a single sales order. Use /order_lines/:id to edit order lines|
-|"DELETE sales_orders/:id":sales_order/#sales_order_delete|Deletes a single sales order and all its order lines|
-|"GET sales_orders":sales_order/#sales_orders_get|Returns the list of all your sales orders|
-|"POST sales_orders":sales_order/#sales_orders_post|Create a single sales order and its order lines|
-|"PUT sales_orders":sales_order/#sales_orders_put|Create and Update several sales orders in a row|
-|"DELETE sales_orders":sales_order/#sales_orders_delete|Delete several sales orders and their order lines in a row|
+|"GET sales_orders/:id":sales_order/#sales_order_get|Returns all the information about the sales order, including its order lines.|
+|"PUT sales_orders/:id":sales_order/#sales_order_put|Update a single sales order. Use ../order_lines/:id to edit order lines.|
+|"DELETE sales_orders/:id":sales_order/#sales_order_delete|Deletes a single sales order and all its order lines.|
+|"GET sales_orders":sales_order/#sales_orders_get|Returns the list of all your sales orders, with their order lines.|
+|"POST sales_orders":sales_order/#sales_orders_post|Create a single sales order and its order lines.|
+|"PUT sales_orders":sales_order/#sales_orders_put|Create (with order lines) and Update (but not order lines) several sales orders in a row.|
+|"DELETE sales_orders":sales_order/#sales_orders_delete|Delete several sales orders and their order lines in a row.|
