--- a/docs/1.0/api/index.textile
+++ b/docs/1.0/api/index.textile
@@ -117,7 +117,7 @@ p(caption). Projects are an easy way to organize your tasks and documents toward
 |"PUT projects":project/#projects_put|Create and update several projects in a row|
 |"DELETE projects":project/#projects_delete|Delete several projects in a row|
 
-p(title). "Sales Order":sales_order/#format
+p(title). "Sales Orders":sales_order/#format
 
 p(caption). The way to register and track orders from your customers.
 
@@ -129,3 +129,17 @@ p(caption). The way to register and track orders from your customers.
 |"POST sales_orders":sales_order/#sales_orders_post|Create a single sales order and its order lines.|
 |"PUT sales_orders":sales_order/#sales_orders_put|Create (with order lines) and Update (but not order lines) several sales orders in a row.|
 |"DELETE sales_orders":sales_order/#sales_orders_delete|Delete several sales orders and their order lines in a row.|
+
+p(title). "Order Lines":order_line/#format
+
+p(caption). Product or service lines that are embeded within sales or purchases documents. Contains infos like price, quantity, description, etc...
+While adding, removing or updating an order line, related values on the contextual document will be updated accordingly.
+
+|_(thead). Type |_(thead). Description |
+|"GET ../order_lines/:id":order_line/#order_line_get|Returns all the information about a single order line.|
+|"PUT ../order_lines/:id":order_line/#order_line_put|Update a single order line. |
+|"DELETE ../order_lines/:id":order_line/#order_line_delete|Removes a single order line from the contextual document. |
+|"GET ../order_lines":order_line/#order_lines_get|Returns the list of all order lines that belongs to the contextual document.|
+|"POST ../order_lines":order_line/#order_lines_post|Add a single order line to the contextual document. |
+|"PUT ../order_lines":order_line/#order_lines_put|Update and Add several order lines to the contextual document in a row. |
+|"DELETE ../order_lines":order_line/#order_lines_delete|Remove several order lines in a row from the contextual document. |
