--- a/docs/1.0/api/account/index.textile
+++ b/docs/1.0/api/account/index.textile
@@ -3,7 +3,9 @@ layout: default
 title: "- REST API V1.0 Resources - Account"
 ---
 
-h1(blue newsection#format). Account Format
+span(anchor#format). ~
+
+h1(blue). Account Format
 
 h3. All Accounts
 
@@ -53,9 +55,10 @@ h3. Lead only
 | rating | Rating | {{ site.format.type.long }} | Codes of Ratings from your domain | Miscellaneous |   |
 
 
-h1(blue newsection#account). accounts/:id
 
-h2(#account_get). GET account/:id
+span(anchor#account_get). ~
+
+h2. GET accounts/:id
 
 p. Returns all the information about the account.
 
@@ -122,7 +125,9 @@ p. JSON response sample (Company with no Contacts)
 {% endhighlight %}
 
 
-h2(#account_put). PUT accounts/:id
+span(anchor#account_put). ~
+
+h2. PUT accounts/:id
 
 p. Update a single account.
 
@@ -146,7 +151,9 @@ p. JSON response
 The up-to-date JSON of the account you've just modfied.
 
 
-h2(#account_delete). DELETE accounts/:id
+span(anchor#account_delete). ~
+
+h2. DELETE accounts/:id
 
 p. Deletes a single account. Also delete all of his contacts.
 
@@ -168,9 +175,9 @@ p. JSON response
 The JSON of the account you've just deleted.
 
 
-h1(blue newsection#accounts). accounts
+span(anchor#accounts_get). ~
 
-h2(#accounts_get).  GET accounts
+h2.  GET accounts
 
 p. Returns the list of all your accounts.
 
@@ -193,7 +200,9 @@ p. JSON response
 The list of all your accounts, in a JSON format.
 
 
-h2(#accounts_post). POST accounts
+span(anchor#accounts_post). ~
+
+h2. POST accounts
 
 p. Create a single account.
 
@@ -216,8 +225,9 @@ p. JSON response
 
 The complete JSON of the account, as it was created by the system.
 
+span(anchor#accounts_put). ~
 
-h2(#accounts_put). PUT accounts
+h2. PUT accounts
 
 p. Create and Update several accounts in a row.
 
@@ -242,7 +252,9 @@ p. JSON response
 A JSON list made of up-to-date info of accounts successfully edited or created, and error messages for unsuccessful ones.
 
 
-h2(#accounts_delete).  DELETE accounts
+span(anchor#accounts_delete). ~
+
+h2.  DELETE accounts
 
 p. Delete several accounts in a row
 
