--- a/docs/1.0/api/item/index.textile
+++ b/docs/1.0/api/item/index.textile
@@ -3,7 +3,9 @@ layout: default
 title: "- REST API V1.0 Resources - Item"
 ---
 
-h1(blue newsection#format). Item Format
+span(anchor#format). ~
+
+h1(blue). Item Format
 
 h3. Services and Products
 
@@ -33,9 +35,9 @@ h3. Products only
 | dimension_unit | Dimension Unit | {{ site.format.type.long }} | IDs from Measurement Unit
 of dimension type | Meter |  |
 
-h1(blue newsection#item). items/:id
+span(anchor#item_get). ~
 
-h2(#item_get). GET items/:id
+h2. GET items/:id
 
 p. Returns all the information about the item.
 
@@ -76,7 +78,9 @@ p. JSON response sample (Company with no Contacts)
 {% endhighlight %}
 
 
-h2(#item_put). PUT items/:id
+span(anchor#item_put). ~
+
+h2. PUT items/:id
 
 p. Update a single item.
 
@@ -100,7 +104,9 @@ p. JSON response
 The up-to-date JSON of the item you've just modfied.
 
 
-h2(#item_delete). DELETE items/:id
+span(anchor#item_delete). ~
+
+h2. DELETE items/:id
 
 p. Deletes a single item.
 
@@ -122,9 +128,9 @@ p. JSON response
 The JSON of the item you've just deleted.
 
 
-h1(blue newsection#items). items
+span(anchor#items_get). ~
 
-h2(#items_get).  GET items
+h2.  GET items
 
 p. Returns the list of all your items.
 
@@ -147,7 +153,9 @@ p. JSON response
 The list of all your items, in a JSON format.
 
 
-h2(#items_post). POST items
+span(anchor#items_post). ~
+
+h2. POST items
 
 p. Create a single item.
 
@@ -171,7 +179,9 @@ p. JSON response
 The complete JSON of the item, as it was created by the system.
 
 
-h2(#items_put). PUT items
+span(anchor#items_put). ~
+
+h2. PUT items
 
 p. Create and Update several items in a row.
 
@@ -195,8 +205,9 @@ p. JSON response
 
 A JSON list made of up-to-date info of items successfully edited or created, and error messages for unsuccessful ones.
 
+span(anchor#items_delete). ~
 
-h2(#items_delete).  DELETE items
+h2.  DELETE items
 
 p. Delete several items in a row
 
