--- a/docs/1.0/api/payment_term/index.textile
+++ b/docs/1.0/api/payment_term/index.textile
@@ -3,16 +3,18 @@ layout: default
 title: "- REST API V1.0 Resources - Payment Term"
 ---
 
-h1(blue newsection#format). Payment Term Format
+span(anchor#format). ~ 
+
+h1(blue). Payment Term Format
 
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
 | id | Code | {{ site.format.type.long }} |
 | name | Name | {{ site.format.type.string64 }} |
 
 
-h1(blue newsection#payment_term). payment_terms/:id
+span(anchor#payment_term_get). ~ 
 
-h2(#payment_term_get). GET payment_terms/:id
+h2. GET payment_terms/:id
 
 p. Returns the code and the name of the payment term.
 
@@ -39,9 +41,9 @@ p. JSON response sample
 {% endhighlight %}
 
 
-h1(blue newsection#payment_terms). payment_terms
+span(anchor#payment_terms_get). ~ 
 
-h2(#payment_terms_get).  GET payment_terms
+h2.  GET payment_terms
 
 p. Returns the list of all your payment terms.
 
