improve the anchor system for accounting entry

--- a/docs/1.0/api/accounting_entry/index.textile
+++ b/docs/1.0/api/accounting_entry/index.textile
@@ -3,12 +3,11 @@ layout: default
 title: "- REST API V1.0 Resources - Accounting Entry"
 ---
 
-h1(blue newsection). General
+span(anchor#format). ~ 
+
+h1(blue). Accounting Entry Format
 
 p. Accounting entries are the main content of any Accounting transaction. They mostly define the amount of the transaction (rounded to two decimal places). They are not editable.
-
-
-h1(blue newsection#format). Accounting Entry Format
 
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} |_. {{ site.format.header.default }} |
 | label | Description of that entry | {{ site.format.type.string128 }} |  | Empty String |
