--- a/docs/1.0/overview/support.textile
+++ b/docs/1.0/overview/support.textile
@@ -6,3 +6,12 @@ title: "- Overview - Support"
 h1. Support
 
 p. If you are having trouble, check this section out to find the recommended plan of action.
+
+
+h3. API Documentation
+
+The official myERP documentation can be found on developers.myerp.com.
+
+h3. Email
+
+The last line of defense. If you have exhausted the above list of resources and feel confident your needs cannot be met there, is to use this support email: <a href="mailto:support@myerp.com" title="">support@myerp.com</a> and provide as much detail as possible.
