--- a/docs/1.0/overview/error_codes.textile
+++ b/docs/1.0/overview/error_codes.textile
@@ -7,7 +7,7 @@ h1. Error Codes and Responses
 
 p. In order to provide more informative error responses, our API attempts to return appropriate HTTP status codes for every request and return errors via a JSON error object containing error_code and error_message attributes.
 
-|_. myERP Code |_. HTTP Code |_. Message |
+|_. myERP Code |_. HTTP Status Code |_. Message |
 | 003 | <a href="https://tools.ietf.org/html/rfc2616#section-10.4.5" target="_blank">404</a> | The resource was not found. |
 | 004 | <a href="https://tools.ietf.org/html/rfc2616#section-10.4.1" target="_blank">400</a>  | You need to specify your account. |
 | 005 | <a href="http://www.webdav.org/specs/rfc2518.html#STATUS_422" target="_blank">422</a>| The JSON request was not parsed. Please double-check the content of the request. |
