--- a/docs/1.0/api/item_family/index.textile
+++ b/docs/1.0/api/item_family/index.textile
@@ -21,7 +21,7 @@ p. Returns the code and the name of the item family.
 
 h3. Resource Information
 
-* Rate limited: No
+* Rate limited: Yes
 * Authentication: Required
 * HTTP Methods: GET
 * Response Format: JSON
@@ -52,7 +52,7 @@ p. Update a single item family.
 
 h3. Resource Information
 
-* Rate limited: No
+* Rate limited: Yes
 * Authentication: Required
 * HTTP Methods: PUT
 * Body Format: JSON
@@ -78,7 +78,7 @@ p. Deletes a single item family.
 
 h3. Resource Information
 
-* Rate limited: No
+* Rate limited: Yes
 * Authentication: Required
 * HTTP Methods: DELETE
 * Response Format: JSON
@@ -102,7 +102,7 @@ p. Returns the list of all your item families.
 
 h3. Resource Information
 
-* Rate limited: No
+* Rate limited: Yes
 * Authentication: Required
 * HTTP Methods: GET
 * Body Format: JSON
@@ -127,7 +127,7 @@ p. Create a single item family.
 
 h3. Resource Information
 
-* Rate limited: No
+* Rate limited: Yes
 * Authentication: Required
 * HTTP Methods: POST
 * Body Format: JSON
@@ -153,7 +153,7 @@ p. Create and Update several item families in a row.
 
 h3. Resource Information
 
-* Rate limited: No
+* Rate limited: Yes
 * Authentication: Required
 * HTTP Methods: PUT
 * Body Format: JSON
@@ -178,7 +178,7 @@ h2.  DELETE item_families
 
 p. Delete several item families in a row
 
-* Rate limited: No
+* Rate limited: Yes
 * Authentication: Required
 * HTTP Methods: DELETE
 * Body Format: JSON
